[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/GameFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scripts/bonuslevel.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
z_index = -1
current = true
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
margin_left = -552.0
margin_top = -304.0
margin_right = 520.0
margin_bottom = 320.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Camera2D"]
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
color = Color( 0.215686, 0.215686, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="MenuButton" type="OptionButton" parent="Buttons"]
margin_left = -448.0
margin_top = -200.0
margin_right = -314.0
margin_bottom = -176.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "SONGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="OptionButton" parent="Buttons"]
margin_left = 176.0
margin_top = -208.0
margin_right = 358.0
margin_bottom = -184.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "SPRITES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Buttons"]
scale = Vector2( 8, 8 )

[node name="Label" type="Label" parent="."]
margin_left = -160.0
margin_top = -280.0
margin_right = 160.0
margin_bottom = -256.0
custom_fonts/font = SubResource( 1 )
text = "BONUS STUFF
ESC TO LEAVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="item_selected" from="Buttons/MenuButton" to="Buttons" method="_on_MenuButton_item_selected"]
[connection signal="pressed" from="Buttons/MenuButton" to="Buttons" method="_on_MenuButton_pressed"]
[connection signal="item_selected" from="Buttons/Sprites" to="Buttons" method="_on_Sprites_item_selected"]
[connection signal="pressed" from="Buttons/Sprites" to="Buttons" method="_on_Sprites_pressed"]
